syntax = "proto3";

package models;

message AvifInfo {
  uint32 width = 1;
  uint32 height = 2;
  uint32 image_count = 3;
  double duration = 4;
}